# yapdes

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  Makefile.common  README  concepts.org  index.html  test.c  test.h  test2.c
doc/dot/: trigger_states.dot
error/: ODE_error.c  ODE_error.h  TODO
marcher/: ODE_control.c  ODE_control.h  ODE_marcher.c  ODE_marcher.h  ODE_marcher_common.h  ODE_stepper.c  ODE_stepper.h  ODE_types.h  TODO
marcher/control_type/: con_std.c  con_std.h
marcher/step_type/: .#step_rkf45.c  step_rkf45.c  step_rkf45.h
mpreal/: makefile  mpreal.cpp  mpreal.h
solver/: ODE_common.h  ODE_solver.c  ODE_solver.h  ODE_splitted_table.c  ODE_splitted_table.h  ODE_state.c  ODE_state.h  ODE_table.c
solver/modules/: ODE_modules.c  ODE_modules.h  module_test.c  module_test.h
solver/modules/module_triggers/: ODE_module_trigger.c  ODE_module_trigger.h  trigger_test.c  trigger_test.h
src/: CMakeLists.txt  common.h  data_type.h  frontpage.h
src/data_type/: double.h  long_double.h  mpreal.h
src/error/: ODE_error.c  ODE_error.h
src/helper/: dictionary.c  dictionary.h  macro.c  macro.h  macro.hpp  storage.c  storage.h
src/marcher/: ODE_all.h  ODE_control.c  ODE_marcher.c  ODE_marcher_common.h  ODE_stepper.c  ODE_stepper.h  ODE_utils.h
src/marcher/control_type/: con_std.c
src/marcher/step_type/: step_rkf45.c  step_rkf45.h
src/mesh/: dictionary.h  mesh.c  mesh.h
src/solver/: ODE_common.h  ODE_module.c  ODE_module.h  ODE_module_bundle.c  ODE_module_bundle.h  ODE_solver.c  ODE_solver.h  ODE_solver_wrappers.c  ODE_solver_wrappers.h  ODE_splitted_table.h  ODE_state.c  ODE_state.h  ODE_stepper.h  ODE_table.c  ODE_table.h  ODE_trigger.c  ODE_trigger.h  ODE_trigger_bundle.c  ODE_trigger_bundle.h  ODE_typedefs.h  pde.c  pde.h
src/solver/modules/: ODE_modules.c  ODE_modules.h  module_state_init.c  module_state_init.h  module_test.c  module_test.h
src/solver/modules/module_triggers/: ODE_module_trigger.c  ODE_module_trigger.h  trigger_test.c  trigger_test.h
src/solver/triggers/: trigger_test.h
src/test/: test.c  test2.h
src/yapdes/error/: ODE_error.c  ODE_error.h
src/yapdes/marcher/: ODE_control.c  ODE_marcher.c  ODE_marcher_common.h
src/yapdes/marcher/control_type/: con_std.h
src/yapdes/solver/: ODE_common.h  ODE_solver.c  ODE_splitted_table.c  ODE_stepper.c  ODE_table.h  ODE_typedefs.h
src/yapdes/solver/modules/: module_test.h
src/yapdes/solver/modules/module_triggers/: ODE_module_trigger.h
src_bkp/marcher/: ODE_control.h  ODE_marcher.c
src_bkp/marcher/control_type/: con_std.c
test/: dictionary.c  dictionary.h  example.cpp  mesh.c  mesh.h  pde.c  pde.h  storage.c  storage.h  storage_array.c  test.c  test.h  test_solver_wrapper_state.c  test_solver_wrapper_state.h
